<resources>
    <string name="app_name">bballscorecounter</string>
    <string name="action_settings">Settings</string>
    <string name="timeout6"><![CDATA[< 6 >]]></string>
    <string name="home">HOME</string>
    <string name="timeouts">Timeouts</string>
    <string name="_3_points">+ 3 Points</string>
    <string name="_2_points">+ 2 Points</string>
    <string name="away">AWAY</string>
</resources>
