<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.bballscorecounter.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:gravity="end"
        android:orientation="vertical">

        <!--Home Team-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="32sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/home"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="100sp"
                    android:textColor="@android:color/black"
                    android:text="0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:clickable="true"
                    android:onClick="homeTimeoutsClick"
                    android:text="@string/timeouts"/>

                <TextView
                    android:id="@+id/home_timeouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:clickable="true"
                    android:text="@string/timeout6"
                    android:onClick="homeTimeoutsClick"
                    />


                <Button
                    android:id="@+id/home_three_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/_3_points"
                    android:onClick="homeThree"/>

                <Button
                    android:id="@+id/home_two_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/_2_points"
                    android:onClick="homeTwo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/home_subtract"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="-"
                        android:onClick="homeSubtract"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="1"/>
                    <Button
                        android:id="@+id/home_add"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="+"
                        android:onClick="homeAdd"/>
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>

            <!--Away Team-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="32sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/away"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/away_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="100sp"
                    android:textColor="@android:color/holo_red_light"
                    android:text="0"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed"
                    android:clickable="true"
                    android:onClick="awayTimeoutsClick"
                    android:text="@string/timeouts"/>
                <TextView
                    android:id="@+id/away_timeouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:clickable="true"
                    android:text="@string/timeout6"
                    android:onClick="awayTimeoutsClick"
                    />


                <Button
                    android:id="@+id/away_three_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/_3_points"
                    android:onClick="awayThree"/>

                <Button
                    android:id="@+id/away_two_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_points"
                    android:textColor="@color/white"
                    android:onClick="awayTwo"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/away_subtract"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/white"
                        android:onClick="awaySubtract"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:text="1"/>
                    <Button
                        android:id="@+id/away_add"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="+"
                        android:onClick="awayAdd"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>

